# bumblebot

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/bumblebot/: bench.cpp  bench.h  bitboard.cpp  bitboard.h  debugging.h  magics.cpp  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
src/bumblebot/nn/: evaluator.cpp  evaluator.h  nn_utils.cpp  nn_utils.h
src/bumblebot/search/: limits.h  node.cpp  node.h  search.cpp  search.h
src/scripts/: magic_gen.py
